# gallop

./: .gitignore  MANIFEST.in  README.md  gallop.bat  gallop_streamlit.py  gallop_streamlit_utils.py  help.md  installer.bat  meta.yaml  pyproject.toml  reset.bat  run-gallop.bat  setup.py
GALLOP_user_settings/: Default.json
data/: CURHOM_1.zmatrix  FOGVIG03_1.zmatrix  Famotidine.dsl  Famotidine.pik  Famotidine.tic  Famotidine.xye  Verap.dsl  Verap.sdi  Verap.tic
gallop/: .gitignore  __init__.py  chi2.py  cli.py  files.py  gallop_streamlit.py  intensities.py  multiGPU.py  optimiser.py  structure.py  tensor_prep.py  z_matrix.py  zm_to_cart.py
gallop/example_data/: CURHOM_2_13_tors.zmatrix  Famotidine.hcv  Famotidine.sdi  Reference for datasets.txt  Verap.hcv  Verap.pik  Verap.xye
gallop/files/: __init__.py  dash.py  gsas.py  shelx.py  topas.py
gallop/optim/: __init__.py  local.py  restraints.py  swarm.py
gallop/streamlit_utils/: __init__.py  files.py  plots.py  settings.py  structure.py
gallop/user_settings/: Default.json
html/gallop/: chi2.html  files.html  index.html  intensities.html  multiGPU.html  optimiser.html  structure.html  tensor_prep.html  z_matrix.html  zm_to_cart.html
