[project]
name = "gallop"
version = "0.1.13"
description = "Fast crystal structure determination from powder diffraction data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair<5",
    "mpld3>=0.5.10",
    "numpy>=2.3.0",
    "py3dmol>=2.5.0",
    "pymatgen>=2025.6.14",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
    "torch>=2.7.1",
    "torch-optimizer>=0.3.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
